# Helix

./: .flake8  .gitignore  README.md  base_options.py  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run_biofefi_pipeline.py  run_ml.py  run_pipeline.py  search.html  searchindex.js  ui.py
.github/workflows/: build-dcos.yml  docs-builder.yml  format-code.yml  publish-docs.yml  publish-to-pypi.yml  run-unit-tests.yml
_sources/: index.rst.txt
_sources/apidocs/: helix.components.forms.rst.txt  helix.components.images.rst.txt  helix.components.rst.txt  helix.options.choices.rst.txt  helix.options.rst.txt  helix.pages.rst.txt  helix.rst.txt  helix.services.feature_importance.rst.txt  helix.services.machine_learning.rst.txt  helix.services.rst.txt  modules.rst.txt
_sources/users/: train_models.md.txt
apidocs/: helix.components.forms.html  helix.components.html  helix.components.images.html  helix.html  helix.options.choices.html  helix.options.html  helix.pages.html  helix.services.feature_importance.html  helix.services.html  helix.services.machine_learning.html  modules.html
biofefi/: Home.py  launch.py  main_page.py  run_biofefi_pipeline.py  ui.py
biofefi/components/: configuration.py  experiments.py  (+4 more)
components/: configuration.py  forms.py  logs.py  plots.py
devs/: code_quality.html  index.html  installation.html  new_models.html
docs/: conf.py  index.rst
feature_importance/: call_methods.py  ensemble_methods.py  feature_importance.py  feature_importance_methods.py  feature_importance_options.py  fi_methods.py  fi_options.py  fuzzy.py  fuzzy_interpretation.py  fuzzy_options.py  interpreter.py
helix/: Home.py  launch.py
machine_learning/: call_methods.py  data.py  get_models.py  granular_surface_macrophage.csv  learner.py  metrics.py  ml_options.py  train.py
options/: choices.py  enums.py  file_paths.py  fuzzy.py  ml.py
services/: ml_models.py
tests/: utils.py
users/: create_experiment.html  data_preprocessing.html  data_visualisation.html  feature_importance.html  index.html  installation.html  train_models.html  using_models.html  view_experiments.html
utils/: logging_utils.py  utils.py
(+165 files in other folders)
