[project]
name = "helix"
version = "1.0.0"
description = ""
authors = [
    { name = "Daniel Lea", email = "Daniel.Lea@nottingham.ac.uk" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "lime==0.2.0.1",
    "matplotlib==3.8.2",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-fuzzy==0.5.0",
    "scikit-learn==1.5.2",
    "seaborn==0.13.2",
    "shap==0.45.0",
    "streamlit==1.36",
    "streamlit-aggrid>=1.1.0,<2.0.0",
    "torch>=2.5.1,<3.0.0",
    "tqdm==4.66.2",
    "xgboost==2.1.0",
]

[project.scripts]
helix = "helix:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
